# htmltoadf

./: .gitignore  .targets  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.alpine  LICENSE.txt  README.md  REAMDE-alpine.md  release.sh  schema.json
docs/: index.html
src/: adf_builder.rs  adf_structure.rs  bin.rs  extractor.rs  lib.rs
src/tests/: colors.rs  combination.rs  empty.rs  headings.rs  image.rs  lists.rs  marks.rs  mod.rs  paragraphs.rs  tables.rs
src/types/: adf_content_type.rs  adf_node.rs  adf_permitted_children.rs  doc_node.rs  mod.rs  node_list.rs
